using stretch instead of center fixes dashboard width on firefox and form width on all browsers

--- a/my-app/src/app/dashboard/page.module.css
+++ b/my-app/src/app/dashboard/page.module.css
@@ -1,7 +1,7 @@
 .dashboard_dreams_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   padding: 0;
   margin-bottom: 40px;
   box-sizing: border-box; /* Ensure padding is included in width/height calculations */
